# pubmed

./: README.md  pyproject.toml  result.csv
get_papers/: cli.py  pubmed.py
tests/: test_pubmed.py
