[tool.poetry]
name = "get-papers"
version = "0.1.0"
description = "Fetch PubMed papers with pharmaceutical affiliations"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
lxml = "^5.2.1"

[tool.poetry.scripts]
get-papers-list = "get_papers.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"